Fix small layout issue with the WordPress admin footer text

--- a/app/assets/css/sass/_styles_general.scss
+++ b/app/assets/css/sass/_styles_general.scss
@@ -71,5 +71,6 @@
 	#wpfooter {
 		z-index: -1;
 		position: fixed;
+		display: none;
 	}
 }
